# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2175 2012/02/13 12:20:00 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.2 2012-03-??
 - 2012-02-13 Fixed bug#8202 - Kernel::System::JSON->Decode() dies when providing malformed JSON.
 - 2012-02-13 Fixed bug#8211 - Typos in Labels: DYNAMICFILED.
 - 2012-02-09 Fixed bug#7109 - Statistics error when PDF support is not active.

3.1.1 2012-02-14
 - 2012-02-09 Fixed bug#8184 - Uninstall and upgrade fails if file in package can't be removed.
 - 2012-02-09 Fixed bug#8199 - Linked tickets open only in tabs.
 - 2012-02-03 Fixed bug#8148 - Wrong presentation of queue structure in CustomerTicketMessage.
 - 2012-02-03 Fixed bug#8137 - Issues with Owner list refresh when selecting a new Owner.
 - 2012-02-03 Fixed bug#8180 - bin/otrs.LoaderCache.pl exit code is wrong.

3.1.0.rc1 2012-02-07
 - 2012-02-03 Fixed bug#8171 - Table rows have different heights.
 - 2012-02-02 Fixed bug#7937 - HTMLUtils.pm ignore to much of e-mail source code.
 - 2012-02-02 Fixed bug#7972 - Some mails may not present HTML part when using rich viewing.
 - 2012-02-02 Fixed bug#8179 - DynamicField backend DateTime renders timestamps with seconds.
 - 2012-01-31 Fixed bug#8163 - Ticket / Article title can't be copied if value is too long.
 - 2012-01-31 Fixed bug#8161 - History hover broken - missing title attribute.
 - 2012-01-30 Fixed bug#8147 - Possible values for queues not being considered in ACLs.
 - 2012-01-30 Fixed bug#8021 - Creating new Dynamic Field is not adding the field name
    to the X-OTRS header lists configuration for the PostMaster filters.
 - 2012-01-27 Fixed bug#8145 - TicketFreeTime entries in search profiles don't get updated.