@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2175 2012/02/13 12:20:00 mg Exp $
+# $Id: CHANGES,v 1.2176 2012/02/13 14:09:28 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.1.2 2012-03-??
+ - 2012-02-13 Fixed bug#8201 - Popup in browser always open on leftmost display when using
+    dual monitor setup.
  - 2012-02-13 Fixed bug#8202 - Kernel::System::JSON->Decode() dies when providing malformed JSON.
  - 2012-02-13 Fixed bug#8211 - Typos in Labels: DYNAMICFILED.
  - 2012-02-09 Fixed bug#7109 - Statistics error when PDF support is not active.
